// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with only one rtl lang > filelist 1`] = `
"[
  ".yfm",
  "_bundle/search-async-1",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/app-css-3",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/page-constructor-extension.css",
  "_bundle/page-constructor-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-css-0",
  "_bundle/search-js-1",
  "_bundle/search-css-3",
  "_bundle/search-css-1",
  "_bundle/search-js-2",
  "_bundle/search-css-2",
  "index.html",
  "page.html",
  "toc.js"
]"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with only one rtl lang 1`] = `"langs: ['he']"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with only one rtl lang 2`] = `
"<!DOCTYPE html>
<html lang="he" dir="rtl">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Documentation | Documentation</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-2"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-3"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":true,"data":{"title":"Documentation","links":[{"title":"Documentation","href":"page.html"}]},"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"title":"Documentation"},"router":{"pathname":"index","depth":1,"base":"./"},"lang":"he","langs":["he"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with only one rtl lang 3`] = `
"<!DOCTYPE html>
<html lang="he" dir="rtl">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Documentation</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-2"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-3"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;תיעוד&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":""},"router":{"pathname":"page","depth":1,"base":"./"},"lang":"he","langs":["he"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with only one rtl lang 4`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"UUID"}],"path":"toc.yaml","id":"UUID"};"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with rtl and ltr langs > filelist 1`] = `
"[
  ".yfm",
  "_bundle/search-async-1",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/app-css-3",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/page-constructor-extension.css",
  "_bundle/page-constructor-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-css-0",
  "_bundle/search-js-1",
  "_bundle/search-css-3",
  "_bundle/search-css-1",
  "_bundle/search-js-2",
  "_bundle/search-css-2",
  "ar/index.html",
  "ar/page.html",
  "ar/toc.js",
  "en/index.html",
  "en/page.html",
  "en/toc.js",
  "index.html"
]"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with rtl and ltr langs 1`] = `"langs: ['ar', 'en']"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with rtl and ltr langs 2`] = `
"<!DOCTYPE html>
<html lang="ar" dir="rtl">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Documentation | Documentation</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-2"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-3"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":true,"data":{"title":"Documentation","links":[{"title":"Documentation","href":"ar/page.html"}]},"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"title":"Documentation"},"router":{"pathname":"ar/index","depth":2,"base":"../"},"lang":"ar","langs":["ar","en"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="ar/toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with rtl and ltr langs 3`] = `
"<!DOCTYPE html>
<html lang="ar" dir="rtl">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Documentation</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-2"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-3"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;توثيق&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"headings":[],"title":""},"router":{"pathname":"ar/page","depth":2,"base":"../"},"lang":"ar","langs":["ar","en"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="ar/toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with rtl and ltr langs 4`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"ar/index.html","items":[{"name":"Documentation","href":"ar/page.html","id":"UUID"}],"path":"ar/toc.yaml","id":"UUID"};"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with rtl and ltr langs 5`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Documentation | Documentation</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="noIndex" content="true">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":true,"data":{"title":"Documentation","description":"","links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"en/page.html"}]},"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"title":"Documentation","noIndex":true},"title":"Documentation"},"router":{"pathname":"en/index","depth":2,"base":"../"},"lang":"en","langs":["ar","en"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="en/toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with rtl and ltr langs 6`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Documentation</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="yfm" content="builder">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Lorem&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"},{"name":"yfm","content":"builder"}]},"headings":[],"title":""},"router":{"pathname":"en/page","depth":2,"base":"../"},"lang":"en","langs":["ar","en"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="en/toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        
    </body>
</html>"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with rtl and ltr langs 7`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"en/index.html","items":[{"name":"Documentation","href":"en/page.html","id":"UUID"}],"path":"en/toc.yaml","id":"UUID"};"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. > documentation with rtl and ltr langs 8`] = `
"<!DOCTYPE html>
<html lang="ar" dir="rtl">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Redirect to ./ar/index.html</title>
        <meta http-equiv="refresh" content="0; url=./ar/index.html">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        <script type="application/javascript">
            window.location.replace("./ar/index.html");
        </script>
        
    </head>
    <body class="g-root g-root_theme_light">
        If you are not redirected automatically, follow this <a href="./ar/index.html">link</a>.
        
        
        
    </body>
</html>"
`;
